--- a/front/index.html
+++ b/front/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>dufajun_blog</title>
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1619794_uxus4aeoq5.css">
   </head>
   <body>
     <div id="app"></div>
